@@ -349,6 +349,7 @@ AC_TYPE_UINT16_T
 AC_TYPE_UINT32_T
 AC_TYPE_UINT64_T
 AC_TYPE_UINT8_T
+AC_CHECK_TYPES([__uint128_t])
 AC_TYPE_LONG_LONG_INT
 
 AC_CHECK_SIZEOF(int)
