@@ -1,5 +1,6 @@
 Version 2.5.40dev:
 
+* Fixed flickering caused by undefined behavior in shift operations.
 * Added new option log_bsdsocket (boolean).
 
 Version 2.5.39dev:
